<resources>
    <string name="app_name">NavigationBar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hello">Hello</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="my_ebuy">My eBuy</string>
    <string name="purchases">Purchases</string>
    <string name="selling">Selling</string>
    <string name="help">Help</string>
    <string name="logout">Log out</string>
</resources>
